# deep_python_23b_aalitvinov

./: .pre-commit-config.yaml  README.md
01/: .gitignore  README.md  TODO.md  homework01.md  pyproject.toml  setup.cfg  tasks.py
01/notebooks/: workbench.ipynb
01/notebooks/lesson-01/: workbench.ipynb
01/src/: predict_message_mood.py  read_generator.py
01/src/lesson_01/: __init__.py  read_generator.py
01/tests/: test_predict_message_mood.py  test_read_generator.py
01/tests/lesson_01/: test_predict_message_mood.py  test_read_generator.py
01/tests/lesson_01/data/: calabaria.txt
02/: .gitignore  README.md  homework-02.md  pyproject.toml  requirements.txt  tasks.py
02/.devcontainer/: Dockerfile  devcontainer.json
02/notebooks/: fakering.ipynb  workbench.ipynb
02/src/: funcperf.py  jq.py
02/tests/: conftest.py  test_funcperf.py  test_jq.py
03/: .gitignore  README.md  TODO.md  custom_list.py  homework-03.md  pyproject.toml  tasks.py  test_custom_list.py
03/notebooks/: hypothesis.ipynb  workbench.ipynb
03/src/: custom_list.py
03/tests/: test_custom_list.py
04/: .gitignore  README.md  custom_meta.py  descriptors.py  homework-04.md  pyproject.toml  tasks.py  test_custom_meta.py  test_descriptors.py
04/notebooks/: descriptors.ipynb  workbench.ipynb
05/: README.md  homework-05.md  lru_cache.py  pyproject.toml  tasks.py  test_lru_cache.py
05/notebooks/: workbench.ipynb
06/: .gitignore  README.md  client.py  homework.md  html_parser.py  http_server.py  pyproject.toml  serve_config.ini  server.py  tasks.py  test_server.py  urls.txt
06/notebooks/: class_06.ipynb  client.ipynb  workbench.ipynb
07/: .gitignore  fetcher.py  homework.md  pyproject.toml  test_fetcher.py  urls.txt
07/notebooks/: workbench.ipynb
08/: classes.py  homework-08.md  pyproject.toml
08/notebooks/: workbench.ipynb
09/: homework-09.md  logged_lru_cache.py  pyproject.toml
09/notebooks/: class_09.ipynb  example.ipynb  workbench.ipynb
10/: .gitignore  Makefile  README.md  generate_json.py  homework-10.md  perf_measure.py  requirements-dev.txt  requirements-extra.txt  setup.py
10/data/: sample.json
10/notebooks/: testy.ipynb
10/src/cjson/: __init__.py  cjsonmodule.cpp  cjsonmodule.pyi
10/tests/: test_cjson.py
