[tool.poetry]
name = "deep_python_hw"
version = "0.1.0"
description = ""
authors = ["Alexander Litvinov <axndr.litvinov@gmail.com>"]
readme = "README.md"
packages = [{ include = "lesson_01", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py311"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "D",   # pydocstyle
    "I",   # isort
    "PL",  # pylint
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
]
ignore = [
    "RUF001", # ambiguous cyrillic letters
    "RUF002", # ambiguous cyrillic letters
]

[tool.pytest.ini_options]
markers = [
    "return_value(Any): used to pass return values to mock.patch in fixtures.",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
