[tool.poetry]
name = "hw4"
version = "0.1.0"
description = ""
authors = ["Alexander Litvinov <axndr.litvinov@gmail.com>"]
readme = "README.md"
packages = [{ include = "custom_meta.py" }, { include = "descriptors.py" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev-opts]
optional = true

[tool.poetry.group.dev-opts.dependencies]
invoke = "^2.2.0"
ipykernel = "^6.25.2"
pre-commit = "^3.5.0"

pytest-cov = "^4.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
ruff = "^0.1.0"
black = { extras = ["jupyter"], version = "^23.10.0" }
mypy = "^1.6.1"
pylint = "^3.0.1"

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 88
count = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["custom_meta", "descriptors"]

[tool.pylint.master]
disable = [
    "too-few-public-methods",
    "missing-function-docstring",
    "missing-class-docstring",
    "unnecessary-dunder-call",
    "logging-fstring-interpolation",
    "useless-return",
]

[tool.pylint.format]
max-line-length = "88"

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "D",   # pydocstyle
    "I",   # isort
    "PL",  # pylint
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
]
ignore = [
    "RUF001",  # ambiguous cyrillic letters
    "RUF002",  # ambiguous cyrillic letters
    "PLR2004", # magic-value-comparison
]

[tool.ruff.per-file-ignores]
"test_custom_list.py" = ["RUF005"]

[tool.ruff.isort]
known-first-party = ["custom_meta", "descriptors"]

[tool.pytest.ini_options]
# pythonpath = ["src"]
addopts = ["--import-mode=importlib"]

[tool.coverage.report]
omit = ["./.venv/*", "tasks.py", "test_custom_meta.py", "test_descriptors.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
