[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["Alexander Litvinov <axndr.litvinov@gmail.com>"]
readme = "README.md"
packages = [{ include = "fetcher.py" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev-opts]
optional = true

[tool.poetry.group.dev-opts.dependencies]
invoke = "^2.2.0"
ipykernel = "^6.27.1"
pre-commit = "^3.5.0"

pytest-cov = "^4.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
ruff = "^0.1.0"
black = { extras = ["jupyter"], version = "^23.11.0" }
mypy = "^1.7.1"
pylint = "^3.0.2"

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 88
count = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["fetcher"]

[tool.pylint.master]
disable = [
    "too-few-public-methods",
    "missing-function-docstring",
    "missing-class-docstring",
    "unnecessary-dunder-call",
    "logging-fstring-interpolation",
    "useless-return",
]

[tool.pylint.format]
max-line-length = "88"

[tool.ruff]
line-length = 88
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "D",   # pydocstyle
    "I",   # isort
    "PL",  # pylint
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
]
ignore = [
    "RUF001",  # ambiguous cyrillic letters
    "RUF002",  # ambiguous cyrillic letters
    "PLR2004", # magic-value-comparison
]

[tool.ruff.per-file-ignores]
"test_custom_list.py" = ["RUF005"]

[tool.ruff.isort]
known-first-party = ["fetcher"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.coverage.report]
omit = ["./.venv/*", "tasks.py", "test_fetcher.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
